--- a/index.html
+++ b/index.html
@@ -1,6 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="css/wheelbarrow.css">
+  <link rel="stylesheet" href="css/place-kitty.css">
+  <style>
+    .kitty-1{
+  position: absolute;	
+  z-index: 1;	
+  top: 276px;}
+   
+   .kitty-2{
+  position: absolute;
+  z-index: 2;
+  top: 212px;
+  left: 369px;
+}
+ .kitty-3{
+ position: absolute;
+  z-index: 3;
+  top: 217px;
+  left: 223px;
+}
+
+  
+  div img{
+  position: absolute;
+  z-index: 5;
+  top: 291px;
+  left: 319px;
+}
+ 
+  .kitty-4{
+    position: absolute;
+  z-index: 4;
+  top: 260px;
+  left: 455px;
+}
+
+  </style>
   <meta charset="UTF-8">
   <title>CSS Kitten Wheelbarrow</title>
   <link rel="stylesheet" href="css/wheelbarrow.css">
