Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="css/wheelbarrow.css">
-  <link rel="stylesheet" href="css/place-kitty.css">
+  <link rel="stylesheet" href="css/kitty-1">
   <style>
     .kitty-1{
   position: absolute;	
