Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="css/wheelbarrow.css">
-  <link rel="stylesheet" href="css/kitty-1.css">
+<!--<head>-->
+<!--  <link rel="stylesheet" href="./style.css">-->
+<!--  <link rel="stylesheet" href="css/wheelbarrow.css">-->
+<!--  <link rel="stylesheet" href="css/kitty-1.css">-->
   <style>
     .kitty-1{
   position: absolute;	
@@ -42,7 +42,7 @@
   <meta charset="UTF-8">
   <title>CSS Kitten Wheelbarrow</title>
   <link rel="stylesheet" href="css/wheelbarrow.css">
-  <link rel="stylesheet" href="css/place-kitty.css">
+  <link rel="stylesheet" href="css/place-kitty-1.css">
 </head>
 <body>
   <div class="wrapper">
