--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--<head>-->
+<head>
 <!--  <link rel="stylesheet" href="./style.css">-->
 <!--  <link rel="stylesheet" href="css/wheelbarrow.css">-->
 <!--  <link rel="stylesheet" href="css/kitty-1.css">-->
