Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <meta charset="UTF-8">
   <title>CSS Kitten Wheelbarrow</title>
   <link rel="stylesheet" href="css/wheelbarrow.css">
-  <link rel="stylesheet" href="css/kitty-1.css">
+  <link rel="stylesheet" href="css/kitty-1">
 </head>
 <body>
   <div class="wrapper">
