--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!--  <link rel="stylesheet" href="./style.css">-->
-<!--  <link rel="stylesheet" href="css/kitty-1.css">-->
+  <link rel="stylesheet" href="./style.css">
   <style>
     .kitty-1{
   position: absolute;	
