--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <meta charset="UTF-8">
   <title>CSS Kitten Wheelbarrow</title>
   <link rel="stylesheet" href="css/wheelbarrow.css">
-  <link rel="stylesheet" href="css/place-kitty.css">
+  <link rel="stylesheet" href="css/place-kitty-1.css">
 </head>
 <body>
   <div class="wrapper">
